responsiveness added for smaller width devices

--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 
     </section>
     
-    <section class="overview hidden">
+    <section class="overview">
 
         <span>Take quick overview</span><br>
-        <span class="material-symbols-outlined">
+        <span class="material-symbols-outlined hidden">
             play_circle
         </span> <br>
         <span>of this App</span>
