--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div id="footer-flex" class="hidden">
                 <div>
                     <p class="footer-flex-head left">Our Office</p><br>
-                    <p>3rd Floor, Estate House 200 North City,<br> Atlantica SA 3000</p>
+                    <p>3rd Floor, Estate House 200<br> North City, Atlantica SA 3000</p>
                 </div>
     
                 <div>
